--- a/resources/screens/d12245cc-1680-458d-89dd-4f0d7fb22724-1436952508136-ie.css
+++ b/resources/screens/d12245cc-1680-458d-89dd-4f0d7fb22724-1436952508136-ie.css
@@ -28,6 +28,21 @@
 #s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_17 {
   -ms-transform: rotate(0.0deg);
 }
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Rectangle_16 {
+  -ms-transform: rotate(0.0deg);
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_35 {
+  -ms-transform: rotate(0.0deg);
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_39 {
+  -ms-transform: rotate(0.0deg);
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_40 {
+  -ms-transform: rotate(0.0deg);
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Rich_text_5 {
+  -ms-transform: rotate(0.0deg);
+}
 #s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Image_1 {
   -ms-transform: rotate(0.0deg);
 }
