--- a/resources/screens/d12245cc-1680-458d-89dd-4f0d7fb22724-1436952508136-ie8.css
+++ b/resources/screens/d12245cc-1680-458d-89dd-4f0d7fb22724-1436952508136-ie8.css
@@ -16,6 +16,36 @@
   margin-left: 0px;
   margin-top: 0px;
 }
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Rectangle_16 {
+  -ms-filter: ;
+  filter: ;
+  margin-left: 0px;
+  margin-top: 0px;
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_35 {
+  -ms-filter: ;
+  filter: ;
+  margin-left: 0px;
+  margin-top: 0px;
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_39 {
+  -ms-filter: ;
+  filter: ;
+  margin-left: 0px;
+  margin-top: 0px;
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Label_40 {
+  -ms-filter: ;
+  filter: ;
+  margin-left: 0px;
+  margin-top: 0px;
+}
+#s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Rich_text_5 {
+  -ms-filter: ;
+  filter: ;
+  margin-left: 0px;
+  margin-top: 0px;
+}
 #s-d12245cc-1680-458d-89dd-4f0d7fb22724 #s-Image_1 {
   -ms-filter: ;
   filter: ;
