--- a/data/styles.css
+++ b/data/styles.css
@@ -1,5 +1,5 @@
 ﻿.ax_shape {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'Roboto Regular', 'Roboto';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -168,36 +168,24 @@
   line-height:normal;
 }
 .ax_hot_spot {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
 .ax_inline_frame {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
 .ax_dynamic_panel {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
 .ax_master {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#333333;
   text-align:center;
@@ -231,27 +219,18 @@
   line-height:normal;
 }
 .ax_menu {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#000000;
   text-align:center;
   line-height:normal;
 }
 .ax_horizontal_line {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
 .ax_vertical_line {
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
   font-size:13px;
   color:#333333;
   text-align:center;
